...
  }

  useEffect(() => {
    if (!isFetchingNote && note === null) {
      Alert.alert(i18n.t(msg`The note doesn't exist`), '', [
        {
          text: i18n.t(msg`OK`),
          style: 'default',
          onPress: () => {
            router.back()
          },
        },
      ])
    }
  }, [i18n, isFetchingNote, note, router])

  return collection && !isFetchingCollection ? (
    <View testID="onboarding.note-editor.screen">
      <Formik
        enableReinitialize
        initialValues={initialValues}
        onSubmit={onSubmit}
      >
        {({ handleChange, handleSubmit, values }) => (
...
                )}
              </FieldArray>
            ))}
            <Pressable
              accessibilityRole="button"
              onPress={() => handleSubmit()}
              testID="onboarding.note-editor.cta.button"
            >
              {values.id ? <Trans>Update note</Trans> : <Trans>Add note</Trans>}
            </Pressable>
          </>
        )}
      </Formik>
...
