...

  if (isOnboardingComplete) {
    return <Redirect href="/(app)" />
  }

  return (
    <SafeAreaView testID="onboarding.welcome.screen">
      <Trans>Welcome</Trans>
      <Link
        href="/onboarding/collection"
        testID="onboarding.welcome.cta.button"
      >
        <Trans>Start</Trans>
      </Link>
    </SafeAreaView>
  )
}
...
